--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -31,6 +31,10 @@
   margin-right: auto;
 }
 
+.App-logo-wrapper:hover {
+  cursor: pointer;
+}
+
 .App-logo {
   height: 60px;
   width: 60px;
@@ -55,7 +59,7 @@
 .title {
   line-height: 64px !important;
   display: inline;
-  color: #03A9F4 !important;
+  color: #03a9f4 !important;
 }
 
 .search-input {
@@ -68,6 +72,6 @@
 .main-menu {
   padding-left: 6% !important;
   padding-right: 6% !important;
-  background-color: #1976D2 !important;
+  background-color: #1976d2 !important;
   color: #f5f5f5 !important;
 }
